[project]
name = "open-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modelscope>=1.33.0",
    "python-multipart>=0.0.6",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "matplotlib>=3.10.8",
]

[tool.uv]
index = [
    { name = "pytorch", url = "https://download.pytorch.org/whl/cu118", explicit = true },
    { name = "pypi", url = "https://pypi.org/simple" }
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

